--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
 		<jquery.version>3.1.1</jquery.version>
 		<mail.version>1.4.7</mail.version>
 		<tiles.version>3.0.7</tiles.version>
+		<junit.version>4.12</junit.version>
+		<webjars-locator.version>0.30</webjars-locator.version>
+		<mysql-connector-java.version>5.1.40</mysql-connector-java.version>
+		<jetty-maven-plugin.version>9.4.0.RC1</jetty-maven-plugin.version>
 	</properties>
 
 	<build>
@@ -42,7 +46,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.0.RC1</version>
+				<version>${jetty-maven-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</build>
@@ -159,7 +163,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.40</version>
+			<version>${mysql-connector-java.version}</version>
 		</dependency>
 
 		<!-- hibernate -->
@@ -196,7 +200,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -230,7 +234,7 @@
 	    <dependency>
 	        <groupId>org.webjars</groupId>
 	        <artifactId>webjars-locator</artifactId>
-	        <version>0.30</version>
+	        <version>${webjars-locator.version}</version>
 	    </dependency>
         <dependency>
 		    <groupId>org.webjars</groupId>
